lib_LTLIBRARIES = libsdp.la
libsdp_la_SOURCES = readprob.c sdp.c op_o.c psd_feas.c op_a.c op_at.c  Fnorm.c calc_pobj.c calc_dobj.c trace_prod.c zero_mat.c mat_mult.c sym_mat.c copy_mat.c addscaledmat.c  user_exit.c make_i.c allocmat.c initsoln.c initparams.c add_mat.c writesol.c readsol.c easysdp.c writeprob.c solvesys.c makefill.c mat_multsp.c norms.c linesearch.c matvec.c chol.c qreig.c tweakgap.c freeprob.c packed.c sortentries.c
libsdp_la_CPPFLAGS = -I$(top_srcdir)/include
libsdp_la_LDFLAGS = @LAPACK_LIBS@ @BLAS_LIBS@ @LIBS@ @FLIBS@ 

